<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sonar_driver</name>
  <version>0.1.0</version>
  <description>Driver for Imaging sonar devices</description>
  <maintainer email="bastian.schildknecht@gmail.com">Bastian Schildknecht</maintainer>
  <maintainer email="jonathan.ehrat@gmail.com">Jonathan Ehrat</maintainer>
  <license>GNU GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sonar_driver_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
